plugins {
    id 'org.springframework.boot' version '2.5.6'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id "org.sonarqube" version "3.3"
    id 'jacoco'
}

group = 'vb.javaCamp'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_17

jacoco {
    toolVersion = "0.8.7"
}

sonarqube {
    properties {
        property "sonar.projectKey", "vladbuhaiets_ApplicationPharmagator"
        property "sonar.organization", "vladbuhaiets-jc-2021"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.tests", "src/test"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
        property "sonar.coverage.jacoco.xmlReportPaths", "${project.buildDir}/reports/jacoco.xml"
        property "sonar.junit.reportsPath", "build/test-results/*/TEST-*.xml"
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.postgresql:postgresql:42.2.24'
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation 'org.flywaydb:flyway-core:7.15.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation 'com.univocity:univocity-parsers:2.9.1'
    implementation 'org.apache.poi:poi:5.1.0'
    implementation 'org.apache.poi:poi-ooxml:5.1.0'
    implementation 'com.itextpdf:itextpdf:5.5.13.2'
    implementation 'com.opencsv:opencsv:5.5.2'

    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2:1.4.200'
    testImplementation 'org.dbunit:dbunit:2.7.2'
    testImplementation 'org.mockito:mockito-inline:4.1.0'


}

test {
    useJUnitPlatform()
    testLogging {
        events = ["passed", "skipped", "failed"]
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            enabled(false)
            limit {
                minimum = 0.5
            }
        }
    }

}